hphp/hack/test/typecheck/reactive/owned_mutable2.php.exp
File "owned_mutable2.php", line 4, characters 3-19:
__OwnedMutable annotation can only be placed on parameters. (Parsing[1002])
